# Capstone_2025

C++/: chord_detect_c++.ino  leftOverfunctions.cpp
Circuits/RLC_BPF/: RLC_BPF.asc
Circuits/RLC_HPF/: HPF.asc
Circuits/RLC_LPF/: LPF_circuit.asc
PICO/pico_capstone/: CMakeList_saved.txt  CMakeLists.txt  CMakeLists_bkp.txt  ChordDetect_saved.cpp  Old_code.c  balabla  chordDetect.cpp  chordDetect_bkp.cpp  sdfbdsf  test.c
PICO/pico_lcd/: CMakeLists.txt  hello_world.cpp
Python/: chord_detect.py
